tests/golden/type_errors/member_call_unknown_name.err
Type error at 1:10: map expects function as second argument, got number
  [1].map(2);
           ^
